--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Docker Build
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 permissions:
   contents: read
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   build-amd64:
-    runs-on: blacksmith-4vcpu-ubuntu-2204
+    runs-on: ubuntu-latest # Utilisation du runner gratuit GitHub pour AMD64
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -47,7 +47,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   build-arm64:
-    runs-on: blacksmith-4vcpu-ubuntu-2204-arm
+    runs-on: ubuntu-latest # Utilisation du runner gratuit GitHub pour ARM64
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -84,7 +84,7 @@ jobs:
 
   create-manifest:
     needs: [build-amd64, build-arm64]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest # Utilisation du runner gratuit GitHub pour le manifest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
