--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,9 @@ permissions:
   packages: write
 
 jobs:
-  build-amd64:
-    runs-on: ubuntu-latest # Utilisation du runner gratuit GitHub pour AMD64
+  build:
+    runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -27,7 +28,7 @@ jobs:
           password: ${{ secrets.TOKEN_GITHUB }}
 
       - name: Extract Docker Metadata
-        id: meta-amd
+        id: meta
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}
@@ -35,84 +36,13 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
 
-      - name: Build and Push AMD64
+      - name: Build and Push Multi-Arch Image
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/${{ secrets.repository_owner_lowercase }}/packistry:latest
-          labels: ${{ steps.meta-amd.outputs.labels }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-  build-arm64:
-    runs-on: ubuntu-latest # Utilisation du runner gratuit GitHub pour ARM64
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.TOKEN_GITHUB }}
-
-      - name: Extract Docker Metadata
-        id: meta-arm
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-
-      - name: Build and Push ARM64
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          platforms: linux/arm64
-          push: true
-          tags: ghcr.io/${{ secrets.repository_owner_lowercase }}/packistry:latest
-          labels: ${{ steps.meta-arm.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  create-manifest:
-    needs: [build-amd64, build-arm64]
-    runs-on: ubuntu-latest # Utilisation du runner gratuit GitHub pour le manifest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.TOKEN_GITHUB }}
-
-      - name: Extract Final Metadata
-        id: meta-final
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository }}
-          tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-
-      - name: Create Combined Manifest
-        run: |
-          for TAG in $(echo "${{ steps.meta-final.outputs.tags }}" | tr ',' ' '); do
-            docker buildx imagetools create \
-              --tag $TAG \
-              ghcr.io/${{ secrets.repository_owner_lowercase }}/packistry:latest \
-              ghcr.io/${{ secrets.repository_owner_lowercase }}/packistry:latest
-          done
