--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.29",
+        "spatie/laravel-backup": "^9.3",
         "spatie/laravel-data": "^4.13",
         "spatie/laravel-query-builder": "^6.3",
         "spiral/roadrunner-cli": "^2.7.0",
